<resources>
    <string name="app_name">Streaming Aja</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample" translatable="false">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>

    <string name="image_content_description" translatable="false">image</string>

    <string name="title_trending">Trending!</string>
    <string name="title_genre">Genre</string>
    <string name="title_channel_list">Channel List</string>

    <string name="title_home">Home</string>
    <string name="title_bookmark">Subscription</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Setting</string>

    <string name="setting_version">Version</string>
    <string name="setting_change_lang">Change Language</string>
    <string name="setting_mobile_data_warning">Mobile Data Warning</string>
    <string name="setting_rate_us">Rate Us on Playstore</string>
    <string name="setting_faq">FAQ</string>
    <string name="setting_feedback">Send Feedback</string>


    <string name="channel_save_as_fav">Subscribe</string>
    <string name="channel_remove_fav">Subscribed</string>

    <string name="warning_is_using_mobile_data">You are currently using Mobile Data. Click here to stop showing warning.</string>
    <string name="warning_close">Close</string>
    <string name="warning_schedule">*note: schedule can be changed without further warning</string>

    <string name="error_player">Can\'t play video. Please try again later.</string>
    <string name="error_empty">Nothing found</string>
    <string name="error_empty_subscibe_main">No subscription yet</string>
    <string name="error_empty_subscibe_submain">Use \"Subscribe\" button to add channel to this page</string>
    <string name="error_empty_genre_main">No channel with \"%s\" genre yet</string>
    <string name="error_empty_search_main">Can\'t find result for \"%s\"</string>
    <string name="error_empty_search_submain">Check the spelling or try a different keyword</string>
    <string name="error_empty_schedule_main">There is no schedule for this channel</string>

    <string name="error_empty_home_main">Oops… something went wrong</string>
    <string name="error_empty_home_submain">Please try to refresh or check your internet connection</string>

    <string name="appversion_need_update_title">Update Required</string>
    <string name="appversion_need_update_desc">We have fixed something &amp; added stuff! We assure you the newer version is better \:\)</string>
    <string name="appversion_need_update_button">Update now</string>
    <string name="appversion_need_update_version_current">Current version %s</string>
    <string name="appversion_need_update_version_new">Latest version %s</string>

    <string name="maintenance_title">Maintenance in Progress</string>
    <string name="maintenance_desc">We are currently working on something and we\'ll be back in a short time!</string>
    <string name="maintenance_urgent">For anything urgent, </string>
    <string name="maintenance_urgent_contact">Contact Us</string>

    <string name="appversion_newer_title">Newer Version Available</string>
    <string name="appversion_newer_desc">We recommend you to download the newer version to enjoy this app with the best experience!</string>
    <string name="appversion_newer_download">Download</string>

    <string name="faq_1_header">What is StreamingAja?</string>
    <string name="faq_1_body">StreamingAja is a free streaming app that let you watch Indonesian channels anywhere, anytime.</string>
    <string name="faq_2_header">Is StreamingAja free?</string>
    <string name="faq_2_body">StreamingAja is totally free and you can enjoy watching your favorite local drama and news without worrying about any payment or subscription.</string>
    <string name="faq_3_header">Do i need to download the video?</string>
    <string name="faq_3_body">No, you don’t need to download the video. Because you can stream every video without downloading.</string>
    
    <string name="onboarding1">Never miss any news again!</string>
    <string name="onboarding2">Watch your favorite TV series anywhere, anytime!</string>
    <string name="onboarding3">Enjoy your local TV entertainment show easily!</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_back">Back</string>
    <string name="onboarding_skip">Skip</string>

    <string name="main_refresh">Refresh</string>
</resources>
