<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_maintenance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/material_white"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_content"
        android:paddingEnd="@dimen/interval_big"
        android:paddingLeft="@dimen/interval_big"
        android:paddingRight="@dimen/interval_big"
        android:paddingStart="@dimen/interval_big"
        android:text="@string/maintenance_desc"
        android:textAlignment="center"
        android:textColor="@color/material_black_sub_text_color"
        android:textSize="@dimen/text_small" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintenance_urgent"
            android:textColor="@color/material_black_sub_text_color"
            android:textSize="@dimen/text_tiny" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/maintenance_urgent_contact"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_tiny" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_main"
        android:layout_marginTop="@dimen/interval_main"
        android:background="@drawable/shape_ripple_grey_fill_rounded"
        android:gravity="center"
        android:paddingBottom="@dimen/interval_submain"
        android:paddingLeft="@dimen/interval_big"
        android:paddingRight="@dimen/interval_big"
        android:paddingTop="@dimen/interval_submain">

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bold"
            android:text="@string/warning_close"
            android:textAllCaps="true"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_xtiny" />
    </LinearLayout>


</LinearLayout>